# quick-word

./: .gitignore  Dockerfile  LICENSE  Makefile  README.rst  devenv.nix  main.py  pyproject.toml  setup.py  tasks.py  test_quick_word.py
.github/workflows/: build.yml  publish.yml
quick_word/: main.py  words.py
src/quick_word/: main.py  words.py
