[tool.poetry]
name = "quick-word"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
bpython = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
